syntax = "proto3";

package inkfaucet;

message InviteRequest {}

message InviteResponse {
    string error = 1;
    string invite = 2;
}

message InviteSubmission {
    string invite = 1;
}

message InviteSubmissionResponse {
    string error = 1;
}

message InkRequest {
    uint64 amount = 1;
    string destination_chain_id = 2;
}

message InkResponse {
    string error = 1;
    bytes token = 2;
}
